# RPG

./: .gitignore  .replit  OregonTrail.py  README.md  TODO.md  changelog.md  or_dates.py  or_events.py  or_globalvars.py  or_helpers.py  or_jobs.py  or_main.py  or_map.py  or_members.py  or_menu.py  or_name.py  or_player.py  or_store.py  or_trail.py  pyproject.toml  store_titles.md  test.py
src/: or_src.bas
