[tool.poetry]
name = "rpg-final"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pynput = "^1.7.3"
rich = "^9.11.1"
xlib = "^0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
